cartopy/docs/v0.11/_sources/gallery.txt
Gallery
=======
Tags:

.. container:: inline-paragraphs

	:ref:`gallery-tag-Lines and polygons`

	:ref:`gallery-tag-Scalar data`

	:ref:`gallery-tag-Vector data`

	:ref:`gallery-tag-Web services`

	:ref:`gallery-tag-Miscellanea`

.. _gallery-tag-Lines and polygons:

Lines and polygons
------------------

.. container:: gallery_images



	|image_effects_of_the_ellipse|_



	.. |image_effects_of_the_ellipse| image:: examples/effects_of_the_ellipse_01_00.thumb.png


	.. _image_effects_of_the_ellipse: examples/effects_of_the_ellipse.html


	|image_feature_creation|_



	.. |image_feature_creation| image:: examples/feature_creation_01_00.thumb.png


	.. _image_feature_creation: examples/feature_creation.html


	|image_features|_



	.. |image_features| image:: examples/features_01_00.thumb.png


	.. _image_features: examples/features.html


	|image_global_map|_



	.. |image_global_map| image:: examples/global_map_01_00.thumb.png


	.. _image_global_map: examples/global_map.html


	|image_hurricane_katrina|_



	.. |image_hurricane_katrina| image:: examples/hurricane_katrina_01_00.thumb.png


	.. _image_hurricane_katrina: examples/hurricane_katrina.html


	|image_rotated_pole|_



	.. |image_rotated_pole| image:: examples/rotated_pole_01_00.thumb.png


	.. _image_rotated_pole: examples/rotated_pole.html
.. _gallery-tag-Scalar data:

Scalar data
-----------

.. container:: gallery_images



	|image_eyja_volcano|_



	.. |image_eyja_volcano| image:: examples/eyja_volcano_01_00.thumb.png


	.. _image_eyja_volcano: examples/eyja_volcano.html


	|image_geostationary|_



	.. |image_geostationary| image:: examples/geostationary_01_00.thumb.png


	.. _image_geostationary: examples/geostationary.html


	|image_srtm_shading|_



	.. |image_srtm_shading| image:: examples/srtm_shading_01_00.thumb.png


	.. _image_srtm_shading: examples/srtm_shading.html


	|image_waves|_



	.. |image_waves| image:: examples/waves_01_00.thumb.png


	.. _image_waves: examples/waves.html
.. _gallery-tag-Vector data:

Vector data
-----------

.. container:: gallery_images



	|image_arrows|_



	.. |image_arrows| image:: examples/arrows_01_00.thumb.png


	.. _image_arrows: examples/arrows.html


	|image_barbs|_



	.. |image_barbs| image:: examples/barbs_01_00.thumb.png


	.. _image_barbs: examples/barbs.html


	|image_regridding_arrows|_



	.. |image_regridding_arrows| image:: examples/regridding_arrows_01_00.thumb.png


	.. _image_regridding_arrows: examples/regridding_arrows.html


	|image_streamplot|_



	.. |image_streamplot| image:: examples/streamplot_01_00.thumb.png


	.. _image_streamplot: examples/streamplot.html
.. _gallery-tag-Web services:

Web services
------------

.. container:: gallery_images



	|image_wmts|_



	.. |image_wmts| image:: examples/wmts_01_00.thumb.png


	.. _image_wmts: examples/wmts.html
.. _gallery-tag-Miscellanea:

Miscellanea
-----------

.. container:: gallery_images



	|image_favicon|_



	.. |image_favicon| image:: examples/favicon_01_00.thumb.png


	.. _image_favicon: examples/favicon.html


	|image_logo|_



	.. |image_logo| image:: examples/logo_01_00.thumb.png


	.. _image_logo: examples/logo.html


	|image_tick_labels|_



	.. |image_tick_labels| image:: examples/tick_labels_01_00.thumb.png


	.. _image_tick_labels: examples/tick_labels.html